--- a/index.html
+++ b/index.html
@@ -27,8 +27,6 @@
         <link rel="stylesheet" type="text/css" href="css/index.css" />
         <title>DEMO</title>
         <script type="text/javascript">
-            document.addEventListener("deviceready", onDeviceReady, false);
-        
             function checkConnection() {
                var networkState = navigator.network.connection.type;
                var states = {};
@@ -52,15 +50,22 @@
                     //window.location="http://demo.epizzeria.dk";
                     //window.open("http://demo.epizzeria.dk", "_system");
                     // external url
-                    var ref = window.open(encodeURI('http://demo.epizzeria.dk'), '_blank', 'location=no');
+                    navigator.notification.alert('Opening website');
+                    var ref = window.open('http://demo.epizzeria.dk, '_self', 'location=yes');
                     // relative document
                     //ref = window.open('next.html', '_self');                    
                 }
             }
+    		function onLoad() {
+    			document.addEventListener("deviceready", onDeviceReady, false);
+    			document.addEventListener("pause", onPause, false);
+    			document.addEventListener("resume", onResume, false);
+    			document.addEventListener("menubutton", onMenuKeyDown, false);
+    		}
         </script>
         
     </head>
-    <body>
+    <body onload="onLoad()">
         <div id="content" style="height: auto; width: auto; overflow: auto; -webkit-overflow-scrolling:touch;">
                 <div style="text-align:center;padding-top:50%">
                     <span id="status">Vent venligst...</span>
