--- a/index.html
+++ b/index.html
@@ -68,9 +68,10 @@
     			document.addEventListener("pause", onPause, false);
     			document.addEventListener("resume", onResume, false);
     			document.addEventListener("menubutton", onMenuKeyDown, false);
+			document.addEventListener("offline", this.onOffline, false);
+			document.addEventListener("online", this.onOnline, false);    			
     		}
         </script>
-        
     </head>
     <body onload="onLoad()">
         <div id="content" style="height: auto; width: auto; overflow: auto; -webkit-overflow-scrolling:touch;">
