--- a/index.html
+++ b/index.html
@@ -36,8 +36,7 @@
         <script type="text/javascript">
 		function fixiFrame () {
 		   if ((android) && (androidVersion > 3)) {
-		      iFrameContentHeight = document.getElementById('body_content').contentDocument.body.offsetHeight;
-		      document.getElementById('body_content').style.height = iFrameContentHeight + 'px';
+		   	document.getElementById('body_content').style.height = document.getElementById('page').offsetHeight + 'px';
 		   }
 		}        
             function checkConnection() {
@@ -80,14 +79,8 @@
         </script>
     </head>
     <body onload="onLoad()">
-    <div id="page">
-	    <table border="0" cellpadding="0" cellspacing="0" style="width: 100%; height: 100%;">
-	    	<tr>
-	    		<td id="content" valign="top">
-		       		<iframe name="body_content" id="body_content" src="http://demo.epizzeria.dk" style="border-bottom: 1px solid #fff; border-top: 1px solid #fff; height: 100%; width: 100%;" onLoad='fixiFrame();'></iframe>
-	        	</td>
-	    	</tr>
-	    </table>
+    <div id="page" style="height:100%;width:100%;">
+     	<iframe name="body_content" id="body_content" src="http://demo.epizzeria.dk" style="border-bottom: 1px solid #fff; border-top: 1px solid #fff; height: 100%; width: 100%;" onLoad='fixiFrame();'></iframe>
     </div>    	
     </body>
 </html>
