--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                     //window.open("http://demo.epizzeria.dk", "_system");
                     // external url
                     navigator.notification.alert('Opening website');
-                    var ref = window.open('http://demo.epizzeria.dk, '_self', 'location=yes');
+                    var ref = window.open('http://demo.epizzeria.dk', '_self', 'location=yes');
                     // relative document
                     //ref = window.open('next.html', '_self');                    
                 }
@@ -80,8 +80,8 @@
         </script>
     </head>
     <body onload="onLoad()">
-    <div id="page" style="height:100%;width:100%;">
-     	<!--<iframe name="body_content" id="body_content" src="http://demo.epizzeria.dk" style="border-bottom: 1px solid #fff; border-top: 1px solid #fff; height: 100%; width: 100%;" onLoad='fixiFrame();'></iframe>-->
-    </div>    	
+    	<div id="page" style="height:100%;width:100%;">
+     		<!--<iframe name="body_content" id="body_content" src="http://demo.epizzeria.dk" style="border-bottom: 1px solid #fff; border-top: 1px solid #fff; height: 100%; width: 100%;" onLoad='fixiFrame();'></iframe>-->
+    	</div>    	
     </body>
 </html>
