added param app

--- a/www/index.html
+++ b/www/index.html
@@ -69,7 +69,7 @@
                 } else {
                     // external url
                     //navigator.notification.alert('Opening website');
-                    var ref = window.open('http://m.pizza-pronto.dk', '_self', 'location=no');
+                    var ref = window.open('http://m.pizza-pronto.dk?app=1', '_self', 'location=no');
                     // relative document
                     //ref = window.open('next.html', '_self');                    
                 }
