--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     //navigator.notification.alert('Opening website');
                     var ref = window.open('http://m.pizza-pronto.dk/?app=1', '_self', 'location=no');
                     // relative document
-                    //ref = window.open('next.html', '_self'); ddd                   
+                    //ref = window.open('next.html', '_self'); ddd  s                 
                 }
             }
         </script>
